--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -15,5 +15,5 @@ height: 100%;
 }
 
 body {
-    background-color: #e9d8bc; /* adjust slightly if needed */
+    /* background-color: #e9d8bc; adjust slightly if needed */
   }
